0.9 2017-12-01
  - Not log in normal mode to stderr.

0.8 2017-11-25
  - Bigger batch size.

0.7 2017-11-25
  - Default configuration to usual CH CPU load.

0.6 2017-11-25
  - Not send (and start transaction) with no values for query.

0.5 2017-11-25
  - Better error logging.
  - Logging count of inserted values.

0.4 2017-11-24
  - Configurable batch and period.

0.3 2017-09-10
  - Small fixes in error processing.

0.2 2017-09-10
  - Resend in period of 1 sec. if we have few data.
  - More items at once (100->1000).

0.1 2017-09-09
  - First release.