@@ -1,5 +1,6 @@
 0.9 2017-12-01
   - Not log in normal mode to stderr.
+  - Catch stop signal, send data to CH and finish.
 
 0.8 2017-11-25
   - Bigger batch size.
